[package]
name = "rust_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[[bin]]
name = "enums"

[[bin]]
name = "fibonacci"

[[bin]]
name = "guessing_game"

[[bin]]
name = "matches"

[[bin]]
name = "rectangles"

[[bin]]
name = "slices"

[[bin]]
name = "temperature_converter"

[[bin]]
name = "variables"

[[bin]]
name = "vectors"